--- a/JiaoBaoYun-hb/html/show/show_home_1.html
+++ b/JiaoBaoYun-hb/html/show/show_home_1.html
@@ -38,26 +38,26 @@
 		<script type="text/javascript" src="../../js/show/show-sub.js"></script>
 		<script type="text/javascript">
 			mui.init();
-			var datasource = {};//数据源
-			var idFlag = 'zx';//判断是展现还是空间
-			var pageIndex = 1;//第几页
-			var totalPage = 0;//总页数
+			var datasource = {}; //数据源
+			var idFlag = 'zx'; //判断是展现还是空间
+			var pageIndex = 1; //第几页
+			var totalPage = 0; //总页数
 			var id = 0; //cell的id
-			var pageFlag = 1;//
-			var pullFlag = 0;
-			var zonepArray;
+			var pageFlag = 1; //判断是展现还是空间
+			var pullFlag = 0; //判断是上拉刷新还是下拉加载更多
+			var zonepArray; //当前数组
 			var personalunick = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).unick; //用户昵称
 			var cities = []; //存储当前定制的城市
 			var show = true; //是否显示展现的内容
 			var pullToRefresh = [] //存储下拉上拉的控件
 			var sliderId = ''; //记录显示的城市
 			var index; //获取index的webview
-			var personalUTID = myStorage.getItem(storageKeyName.PERSONALINFO).utid;
+			var personalUTID = myStorage.getItem(storageKeyName.PERSONALINFO).utid; //用户utid
 			var userIDs; //关注的用户
-			var SCREEN_WIDTH;
+			var SCREEN_WIDTH; //屏幕宽度
 			mui.plusReady(function() {
 				SCREEN_WIDTH = plus.screen.resolutionWidth;
-				mui.previewImage();
+				mui.previewImage(); //浏览图片详情
 				var main = plus.webview.currentWebview(); //获取当前窗体对象
 				index = plus.webview.getWebviewById('index.html'); //
 
@@ -71,6 +71,22 @@
 					//改变顶部的城市
 					changeIndexHeader();
 				});
+				window.addEventListener('changeFocus', function(e) {
+					var publisherID = e.detail.data;
+					var IsFocused = e.detail.IsFocused;
+					console.log(JSON.stringify(e.detail))
+					console.log(JSON.stringify(datasource))
+					for(var item1 in datasource){
+						var tempArray = datasource[item1]
+						console.log(JSON.stringify(tempArray))
+						for(var i in tempArray ){
+							console.log(JSON.stringify(tempArray[i]))
+							if(tempArray[i].PublisherId == publisherID){
+								tempArray[i].IsFocused=IsFocused
+							}
+						}
+					}
+				})
 				window.addEventListener('infoChanged', function() {
 					var cityID = sliderId.replace('top_', '');
 					console.log('重现显示展现界面')
@@ -221,6 +237,9 @@
 								//81.（用户空间）获取用户所有关注的用户
 								getFocusByUser();
 							}
+						}else{
+							console.log(JSON.stringify(datasource))
+							zonepArray = datasource[sliderId];
 						}
 					});
 
@@ -671,6 +690,7 @@
 								zonepArray = zonepArray.concat(tempRspData);
 							}
 							datasource[sliderId] = zonepArray;
+							console.log('总数据：'+JSON.stringify(datasource));
 							console.log("重组后的数据：" + JSON.stringify(zonepArray));
 							setData(zonepArray, 0);
 						});
@@ -716,6 +736,77 @@
 			}
 
 			function addSomeEvent() {
+				mui('.mui-table-view').on('tap', '.icon-xiajiantou', function() {
+					var personalUTID = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).utid; //用户昵称
+
+					var pageID = sliderId.replace('top_', '')
+					var tempId = this.id;
+					var index = this.id.replace('btn-focus' + pageID + 'zx', '');
+					console.log('index='+index)
+					var isFocus = zonepArray[index].IsFocused;
+//					var isFocus = jQuery('#'+this.id).data('isFocus');
+					var title,status;
+					if(isFocus==0){
+						title = '关注'
+						status = 1;
+					}else{
+						title = '已关注'
+						status = 0;
+					}
+					var btnArray = [{ title: title, style: "destructive" }];
+					plus.nativeUI.actionSheet({
+						cancel: "取消",
+						buttons: btnArray
+					}, function(e) {
+						var flag = e.index;
+						switch(flag) {
+							case 0:
+								break;
+							case 1:
+								{
+									//80.（用户空间）设置某用户的关注
+									//所需参数
+									var comData = {
+										userId: personalUTID, //用户ID
+										focusId: zonepArray[index].PublisherId, //关注ID
+										status: status //关注状态，0 不关注，1 关注
+									};
+									//返回：1为正确
+									var wd = events.showWaiting();
+									postDataPro_setUserFocus(comData, wd, function(data) {
+										wd.close();
+										console.log(JSON.stringify(data))
+										if(data.RspCode == 0) {
+											var pageID = sliderId.replace('top_', '')
+											setTimeout(function() {
+												//获取数据
+												if(pageID != 0) { //定制的城市
+													for(var i=0;i<zonepArray.length;i++){
+														if(zonepArray[index].PublisherId==zonepArray[i].PublisherId){
+															if(isFocus==0){
+																zonepArray[i].IsFocused=1;
+																datasource[sliderId] = zonepArray
+															}else{
+																zonepArray[i].IsFocused=0;
+																datasource[sliderId] = zonepArray
+															}
+															
+														}
+													}
+												} else { //关注的人数据
+													//81.（用户空间）获取用户所有关注的用户
+													getFocusByUser();
+												}
+											}, 1000);
+										}
+
+									})
+
+								}
+								break;
+						}
+					});
+				});
 
 				mui('.mui-table-view').on('tap', '.mui-table-view-cell', function() {
 
@@ -1044,6 +1135,7 @@
 							zonepArray = data;
 						}
 						datasource[sliderId] = zonepArray;
+						console.log('总数据：'+JSON.stringify(datasource));
 						console.log("重组后的数据：" + JSON.stringify(zonepArray));
 						setData(zonepArray, cityCode);
 					} else {
@@ -1185,7 +1277,7 @@
 
 				datasource1 = [InfoList, ImageList, InteractionList, EncAddrList, cityCode]
 
-				//				console.log('datasource' + JSON.stringify(datasource))
+				//				console.log('datasource' + JSON.stringify(datasource))1
 				return datasource1;
 			}
 
