--- a/JiaoBaoYun-hb/html/register/modify_password.html
+++ b/JiaoBaoYun-hb/html/register/modify_password.html
@@ -55,7 +55,7 @@
 					<label style="font-size: 15px;">确认密码</label>
 					<input type="password" oninput="if(value.length>20)value=value.slice(0,20)" id="password1" placeholder="重新输入新密码">
 				</div>
-				<div class="mui-input-row" id="unickName0">
+				<div class="mui-input-row" id="unickName0" style="display: none;">
 					<label style="font-size: 15px;">昵称</label>
 					<input type="text" oninput="if(value.length>20)value=value.slice(0,20)" id="unickName" placeholder="请输入昵称，最多20字">
 				</div>
