--- a/JiaoBaoYun-hb/html/cloud/app_notes_create.html
+++ b/JiaoBaoYun-hb/html/cloud/app_notes_create.html
@@ -74,10 +74,10 @@
 					Key: personalUTID, //utid
 					Picture: true, //是否显示图片图标
 					Audio: true, //是否显示音频图标
-					Video: true, //是否显示视频图标
+//					Video: true, //是否显示视频图标
 					TotalPicture: 9, //图片的个数
 					TotalAudio: 1, //音频的个数
-					TotalVideo: 1, //视频的个数
+//					TotalVideo: 1, //视频的个数
 				});
 
 				//完成
