修改求知旧数据引起的显示问题

--- a/JiaoBaoYun-hb/html/qiuzhi/expert-ask.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/expert-ask.html
@@ -273,6 +273,13 @@
 				//总页数
 				totalPageCount = data.RspData.TotalPage;
 				pageIndex++;
+				//如果是旧数据，去掉里面的html标签
+				for(var i = 0; i < data.RspData.Data.length; i++) {
+					var temp = data.RspData.Data[i];
+					if(temp.AskSFlag == 1) {
+						temp.AskTitle = events.deleteHtml(temp.AskTitle);
+					}
+				}
 				if(flagRef == 0) { //刷新
 					datasource = data.RspData.Data;
 					if(data.RspData.Data.length == 0) {
