--- a/JiaoBaoYun-hb/html/qiuzhi/expert-ask.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/expert-ask.html
@@ -289,7 +289,7 @@
 					//合并数组
 					datasource = datasource.concat(data.RspData.Data);
 				}
-				addData();
+				addData(data.RspData.Data);
 				if(mui(".mui-table-view-cell").length < 10) {
 					mui(".mui-pull-loading")[0].innerHTML = "";
 				}
@@ -299,16 +299,16 @@
 		});
 	};
 
-	function addData() {
-		for(var i = 0; i < datasource.length; i++) {
-			var str_Time = modifyTimeFormat(datasource[i].AskTime);
+	function addData(datasource1) {
+		for(var i = 0; i < datasource1.length; i++) {
+			var str_Time = modifyTimeFormat(datasource1[i].AskTime);
 			var list = document.getElementById("list-container");
 			var li = document.createElement("li");
 			li.id = 'li' + i;
 			li.className = 'mui-table-view-cell';
 			li.innerHTML = '<div class="mui-table"><div class="mui-table-cell mui-col-xs-12">' +
-				'<h4 class="mui-ellipsis" style="font-size:1.6rem;color: #323232;">' + datasource[i].AskTitle +
-				'</h4><p class="mui-h6 mui-ellipsis"  style="font-size:1.3rem;color: #B7B7B7;">' + datasource[i].AnswerNum + '回答·' + datasource[i].FocusNum + '关注·' + str_Time + '</p></div></div>'
+				'<h4 class="mui-ellipsis" style="font-size:1.6rem;color: #323232;">' + datasource1[i].AskTitle +
+				'</h4><p class="mui-h6 mui-ellipsis"  style="font-size:1.3rem;color: #B7B7B7;">' + datasource1[i].AnswerNum + '回答·' + datasource1[i].FocusNum + '关注·' + str_Time + '</p></div></div>'
 			list.appendChild(li);
 		}
 	}
